# Energy-rte-tempo-forecasting

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  Soutenance - MLOps.pptx  kestra_kv_keys.yaml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  protect-prod.yml  sync-dev.yml  validate.yml
10-flows/: elastic_linky_realtime.yaml  mlops_linky_forecast_3d.yaml  mlops_train_forecast.yaml  mqtt_linky_gold.yaml  mqtt_linky_ingest.yaml  mqtt_linky_silver.yaml
10-flows/prod/: mlops_linky_forecast_3d.yaml  (+4 more)
100-scripts/: challenger_forecast_mlops.py  forecast_linky_705.py  mlops_forecast_linky_705.py  optimize_tempo.py  refresh_tempo_v3.sql  tempo_forecast.py
100-scripts_mlops/: mlops_forecast_linky_705.py  mlops_train_linky_705.py  optimize_tempo_v2.py
110-api/: Dockerfile  db.py  main.py  models.py  requirements.txt
120-webapp/: README.md
130-tests/: test_api.py  test_config_sync.py  test_deploy_script.py  test_flows.py  test_smoke.py  test_smoke_apps.py  test_webapp.py
150-flows/: mlops_train_forecast.yaml  mqtt_linky_gold.yaml  mqtt_linky_ingest.yaml  mqtt_linky_silver.yaml
170-docs/: archi_bronze_silver_gold_linky_kestra_dbt.md  cd_deploy_prod.md  ci_cd.md  flows.md  infra_prod.md  kestra_kv_contract.md  plan_amelioration_tempo.md
20-scripts_mlops/: mlops_forecast_linky_705.py  mlops_forecast_linky_705_old.py
75-infra-prod/: kestra-values.yaml
docs/: kestra_kv_contract.md
infra-prod/: kestra-values.yaml
scripts/: benchmark_tempo.py  optimize_tempo.py  pyproject.toml
sql/: init_openmeteo_forecast.sql
(+70 files in other folders)
