[project]
name = "energy-rte-tempo-forecasting"
version = "0.1.0"
description = "Energy RTE Tempo forecasting — MLOps project 705"
requires-python = ">=3.10.12"
dependencies = []

[project.optional-dependencies]
ci = [
    "pyyaml>=6.0",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["130-tests"]
pythonpath = ["."]
